--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -76,9 +76,9 @@
         "return-type": "json",
         "format": "{icon}",
         "format-icons": {
-            "performance": "",
-            "balanced": "",
-            "eco": "",
+            "performance": "󱟕",
+            "balanced": "󱟓",
+            "eco": "󰗢",
             "unknown": ""
         },
         "tooltip": true,
