Use nmtui for network control
The `nmcli dev wifi rescan` is there to be able to accept and open up a
new connection.

--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -68,7 +68,7 @@
         "format-ethernet": " {ipaddr}",
         "format-disconnected": "",
         "interval": 3,
-        "on-click": "nm-connection-editor",
+        "on-click": "nmcli dev wifi rescan && ghostty -e nmtui",
     },
 
     "custom/power": {
