--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -4,7 +4,7 @@
     "modules-left": ["niri/workspaces", "niri/window"],
     "modules-center": ["clock"],
     // Bluetooth is in the tray, so no worries there
-    "modules-right": ["tray",  "battery", "niri/language", "custom/power", "cpu", "memory", "network", "pulseaudio"],
+    "modules-right": ["tray",  "battery", "niri/language", "custom/power", "cpu", "memory", "custom/vpn", "network", "pulseaudio"],
 
 
     "pulseaudio": {
@@ -92,6 +92,20 @@
         "interval": 60,
         "signal": 8,
         "on-click": "~/.local/bin/waybar-power-mode.sh toggle && pkill -RTMIN+8 waybar",
+    },
+
+    "custom/vpn": {
+      "exec": "~/.local/bin/ovpn3ctl.py status",
+      "return-type": "json",
+      "format": "{icon}",
+      "format-icons": {
+        "connected": "󰆚",
+        "disconnected": "󱣼",
+      },
+      "tooltip": true,
+      "interval": 60,
+      "signal": 9,
+      "on-click": "~/.local/bin/ovpn3ctl.py toggle && pkill -RTMIN+9 waybar",
     }
 
 }
