Rewrite common window names
A little weird that I can't the logo of the running program if present,
but what can ya do.

--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -27,6 +27,13 @@
     "niri/workspaces": {
         "format": "{index}"
     },
+    "niri/window": {
+        "format": "{}",
+        "rewrite": {
+            "(.*) — Mozilla Firefox": "  $1",
+            "(.*) - GNU Emacs at (.*)": " $1"
+        }
+    },
     "niri/language": {
         "format": "{}",
         "format-no": "🇳🇴",
