Fixup ethernet cable icon
The original is back from my shenanigans where I tried to use Font
Awesome, but I have changed to Nerd Fonts since then.

--- a/private_dot_config/waybar/config.jsonc
+++ b/private_dot_config/waybar/config.jsonc
@@ -79,7 +79,7 @@
     },
     "network": {
         "format-wifi": "  {signalStrength:>2}%",
-        "format-ethernet": " {ipaddr}",
+        "format-ethernet": "󰈀 {ipaddr}",
         "format-disconnected": "",
         "interval": 3,
         "on-click": "nmcli dev wifi rescan && ghostty -e nmtui",
