Change some folder names

--- a/private_dot_config/ohmyposh/config.toml
+++ b/private_dot_config/ohmyposh/config.toml
@@ -97,4 +97,5 @@ final_space = true
 
       [blocks.segments.properties.mapped_locations]
       "~/.config" = ' '
-      "~/code" = ' '
+      "~/code" = '󰈮'
+      "~/work" = '🐮'
